# SimpleTaskManager

./: .gitignore  CMakeLists.txt  Config.h.in  README  SimpleTaskManager.pro  Task.cpp  Task.h  TaskDialog.cpp  TaskDialog.h  TaskDialog.ui  TaskListModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
doc/: CMakeLists.txt  Doxyfile.in
rsc/: resources.qrc
src/: Config.h.in  SimpleTimerDialog.cpp  SimpleTimerDialog.h  Task.h  TaskDialog.cpp  TaskDialog.h  TaskListModel.cpp  TaskListModel.h  Timer.cpp  Timer.h  main.cpp  mainwindow.cpp  mainwindow.h
src/GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  NotifyDialog.cpp  NotifyDialog.h  NotifyDialog.ui  SimpleTimerDialog.cpp  SimpleTimerDialog.h  SimpleTimerDialog.ui  TaskListModel.cpp  TaskListModel.h  TaskListView.cpp  TaskListView.h  TrayIcon.cpp  TrayIcon.h
src/Task/: Task.cpp  Task.h
src/TaskDialog/: TaskDialog.cpp  TaskDialog.h  TaskDialog.ui
src/Timer/: Timer.cpp  Timer.h
src/lib/: Singleton.h
src/rsc/: resources.qrc
tools/: CppCheckSimpleTaskManager.cppcheck  run_cppcheck.bat  run_flawfinder.bat  run_rats.bat
ui/: SimpleTimerDialog.ui  TaskDialog.ui  mainwindow.ui
